--- a/_config.yml
+++ b/_config.yml
@@ -76,12 +76,14 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
-  books:
-    title: 'Books'
-  manuscripts:
-    title: 'Journal Articles'    
+  articles:
+    title: 'Journal Articles'  
   conferences:
     title: 'Conference Papers'
+  dissertations:
+    title: 'Dissertations'
+  others:
+    title: 'Other Research'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
